--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@
     --accent-color: #2196F3;
     --secondary-text-color: #FFFFFF;
     --hero-bg-color: #2F303A;
+    --bg-color: #FFFFFF;
     --primary-bg-color: #E5E5E5;
     --secondary-bg-color: #F5F4FA;
     --footer-color: rgba(255, 255, 255, 0.6);
@@ -20,17 +21,13 @@
 }
 
 body {
-    background-color: var(--primary-bg-color);
+    background-color: var(--bg-color);
     color: var(--primary-text-color);
     font-family: 'Roboto', sans-serif;
     letter-spacing: 0.03em;
     font-weight: 400;
     font-size: 14px;
     line-height: 1.7;
-}
-
-header {
-    background-color: var(--header-color);
 }
 
 .logo {
@@ -82,7 +79,6 @@ header {
 .contacts a {
     color: var(--primary-text-color);
     font-weight: 500;
-    font-size: 14px;
     line-height: 1.1px;
     letter-spacing: 0.02em;
     text-decoration: none;
@@ -96,8 +92,10 @@ header {
 
 .contacts a:hover,
 .contacts a:focus,
-.contacts-footer a:hover,
-.contacts-footer a:focus
+.contacts-footer .mail:hover,
+.contacts-footer .phone:hover,
+.contacts-footer .mail:focus,
+.contacts-footer .phone:focus
 {
     color: var(--accent-color);
     text-decoration: none;
@@ -107,13 +105,15 @@ header {
 
 .button {
     font-family: inherit;
+    border: none;
+    border-radius: 4px;
+    padding: 6px 22px;
+    letter-spacing: 0.03em;
 }
 
 .button.primary {
     color: var(--title-text-color);
     background-color: var(--secondary-bg-color);
-    width: 128px;
-    height: 38px;
     text-align: center;
     font-weight: 500;
     font-size: 16px;
@@ -161,10 +161,6 @@ footer {
 
 /* section */
 
-.section {
-    background-color: var(--primary-bg-color);
-}
-
 .section-title {
     color: var(--title-text-color);
     font-weight: 700;
@@ -184,16 +180,8 @@ footer {
     color: var(--title-text-color);
 }
 
-.benefits-description {
-    font-size: 14px;
-    line-height: 24px;
-}
-
 /* team */
 
-.section.team {
-    background-color: var(--secondary-bg-color);
-}
 
 .team-title {
     font-weight: 500;
@@ -222,6 +210,10 @@ footer {
 .portfolio-description {
     font-size: 16px;
     line-height: 1.9;
+}
+
+.portfolio-info {
+    display: none;
 }
 
 /* filter */
